--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,69 @@
-.vscode
-build
-libft/build
-*.a
+# Build outputs
+build/
+dist/
+bin/
+out/
 *.o
+*.so
+*.dll
+*.dylib
+*.exe
+
+# Dependencies
+node_modules/
+vendor/
+lib/
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Logs and databases
+*.log
+*.sql
+*.sqlite
+
+# Environment files
+.env
+.env.local
+.env.*.local
+.env.development
+.env.test
+.env.production
+
+# Cache and temporary files
+.cache/
+tmp/
+temp/
+*.tmp
+
+# Debug files
+*.debug
+
+# Coverage and test reports
+coverage/
+.nyc_output/
+junit.xml
+test-results/
+
+# Personal files
+TODO.md
+NOTES.md
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# executions
+
+minishell
+
